Fixes spacing on homepage postgenius section

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -19,7 +19,7 @@ $whiteFontColor: #FFFFFF
 $blueTheme: #67b4f9;
 $skyBlueTheme: #AFD3EC;
 $yellowTheme: #FFD833;
-$greyTheme: #585757
+$greyTheme: #A9A9A9
 $shadowColor: #E9E9E9
 $shadowHover: #888888
 
@@ -43,15 +43,18 @@ $maxScreen: 1440px;
 ////////////////////
 
 .headerFont
+  font-family: $primaryFont
   font-size: calc(18px + 2vw)
   line-height: 1em
 
 .bodyFont
+  font-family: $primaryFont
   font-size: calc(16px + 0.3vw)
   line-height: 1em
 
 .captionFont
-  font-size: calc(14px + 0.5vw)
+  font-family: $primaryFont
+  font-size: calc(16px + 0.5vw)
   line-height: 1em
   font-style: italic
 
