--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -6,6 +6,7 @@
 
 .index
   overflow-x: hidden
+  font-family: $primaryFont
 
   
 ////////////////////
@@ -151,19 +152,19 @@
 ////////////////////
   
 .midSection
+  margin-top: 0px
+  margin-left: 5%
+  height: 325px
   display: flex
   flex-direction: row-reverse
   align-items: top 
   justify-content: flex-end
-  height: 325px
-  margin-top: 96px
-  margin-left: 5%
-
   @media ($mobileBreak)
-    margin-top: 48px
+    margin-top: 24px
+    margin-left: 0px
+    height: auto
     align-items: center
     flex-direction: column
-    height: auto
 
 .midSection__screenshot1
   width: 800px
@@ -175,7 +176,6 @@
     width: 90%
     box-shadow: 3px 3px 4px 1px $shadowColor
 
-
 .midSection__screenshot2
   height: auto
   width: 450px
@@ -183,7 +183,6 @@
   box-shadow: 3px 3px 4px 1px $shadowColor
   margin-top: 155px
   left: -70%
-
   @media ($mobileBreak)
     display: none
 
@@ -192,28 +191,31 @@
   margin-left: 10%
   width: 250px
   text-align: right
-
   @media (max-width: 1200px)
     margin-left: 0px
-  
   @media ($mobileBreak)
-    text-align: center
+    margin-right: 0px
     width: 70%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-around
+    text-align: center
 
 .midSection__text__title
   font-family: $primaryFont
-  font-size: 24px
+  font-size: calc(18px + .5vw)
   font-weight: bold
-  margin-bottom: 12px
-
   @media ($mobileBreak)
     font-size: calc(18px + 3vw)
     line-height: 1em
+    width: 100%
+  @media (max-width: 440px)
+    width: 296px
 
 .midSection__text__body
   font-size: 16px
   font-style: italic
-
   @media ($mobileBreak)
     font-size: calc(16px + 0.5vw)
     line-height: 1em
@@ -224,14 +226,19 @@
     width: 90%
     font-family: $primaryFont
     font-style: italic
+  @media (max-width: 560px)
+    width: 195px
 
 .midSection__caption
+  font-family: $primaryFont
   font-size: calc(18px + 0.2vw)
+  font-style: bold 
   color: white
   width: 45%
   margin-top: 128px
   margin-left: 5%
-
+  @media (max-width: 1000px)
+    width: 35%
   @media ($mobileBreak)
     display: none
 
@@ -243,12 +250,14 @@
     margin-bottom: 24px
     color: white
     width: 65%
-    margin-left: -24px
-  @media (max-width: 750px)
+    margin-left: -198px
+  @media (max-width: 780px)
+    margin-left: -164px
+  @media (max-width: 700px)
     width: 90%
     margin-left: 0px
   @media (max-width: 480px)
-    width: 90%
+    width: 80%
     align-self: flex-start
     margin-left: 20px
   @media (max-width: 336px)
@@ -268,26 +277,30 @@
     margin-top: -475px
   @media (max-width: 750px)
     margin-top: -480px
-  @media (max-width: 575px)
-    margin-top: -440px
+  @media (max-width: 600px)
+    margin-top: -430px
     height: 450px
-    width: 575px
-  @media (max-width: 525px)
-    margin-top: -400px
-    height: 400px
-    width: 525px
+    width: 655px
+  @media (max-width: 550px)
+    margin-top: -430px
+    height: 450px
+    width: 625px
   @media (max-width: 500px)
+    margin-top: -390px
+    height: 400px
+    width: 555px
+  @media (max-width: 450px)
     margin-top: -350px
     height: 375px
     width: 500px
-  @media (max-width: 475px)
+  @media (max-width: 400px)
     margin-top: -340px
     height: 350px
     width: 475px
   @media ($smallBreak)
     margin-top: -249px
     height: 250px
-    width: 375px
+    width: 379px
 
 
 /////////////////////////
@@ -314,73 +327,16 @@
     justify-content: center
     width: 90%
 
-.postSection__title
-  display: flex
-  flex-direction: row
-  text-align: center
-  align-items: center
-  justify-content: space-around
-  margin-bottom: 36px
-  width: 90%
-
-  @media ($mobileBreak)
-    display: flex
-    flex-direction: column-reverse
-    align-items: center
-    justify-content: center
-    font-family: $primaryFont
-    text-align: center
-    margin-bottom: 24px
-
-.postSection__title__image
-  margin-left: 10%
-  width: 20%
-  @media ($mobileBreak)
-    margin-left: 0px
-    width: 50%
-
-.postSection__title__text
-  width: 75%
-
-  @media ($mobileBreak)
-    width: 100%
-    margin-bottom: 18px
-  
-
-.postSection__title__text__line1
-  font-size: calc(22px + 1.5vw)
-  line-height: 1.5em
-  font-weight: bold
-  @media ($mobileBreak)
-    font-size: 17px
-    line-height: 1.5em
-    font-weight: bold
-
-.postSection__title__text__line2
-  font-size: calc(24px + 1.5vw)
-  line-height: 1em
-  font-weight: bold
-  margin-bottom: 6px
-  @media ($mobileBreak)
-    font-size: 28px
-    line-height: 1em
-    font-weight: bold
-    margin-bottom: 6px
-
-.postSection__title__text__line3
-  font-size: calc(16px + 0.2vw)
-  line-height: 1em
-  @media ($mobileBreak)
-    font-size: 18px
-    line-height: 1em
-
 .postSection__features
+  margin-top: 24px
   display: flex
-  align-items: center
+  align-items: flex-start
   flex-direction: row
   justify-content: space-around
 
   @media ($mobileBreak)
+    margin-top: 0px
+    align-items: center
     flex-direction: column
 
 
@@ -398,44 +354,45 @@
     width: 80%
 
 .featuresList__title
+  margin-left: -8%
+  margin-bottom: 24px
   font-family: $primaryFont
-  font-size: calc(22px + 0.5vw)
+  font-size: calc(14px + 0.2vw)
+  font-weight: bold
   color: $greyTheme
-  margin-bottom: 12px
-  margin-left: -5%
+  text-transform: uppercase
+
 
   @media ($mobileBreak)
     margin-left: 0px
+    margin-bottom: 16px
     text-align: center
-
-
 
 .featureList__cards
   display: flex
   flex-direction: column
-  
 
 .card
-  margin-bottom: 10%
+  margin-bottom: 15%
   @media ($mobileBreak)
     margin-bottom: 5%
 
 
 .card___title
-  font-weight: bold
+  margin-bottom: 12px
   font-size: calc(16px + 0.5vw)
   line-height: 1em  
-  margin-bottom: 12px
+  font-weight: bold
   @media ($mobileBreak)
-    margin-bottom: 0px
+    margin-bottom: 12px
 
 .card__description
-  font-size: calc(14px + 0.5vw)
+  font-size: calc(14px + 0.2vw)
   line-height: 1em
   margin-bottom: 12px
 
 .stagger
-  margin-left: 5%
+  margin-left: 8%
   @media ($mobileBreak)
     margin-left: 0px
 
